	'SOURCE-DELETE traffic fields to be corrupt when adding a new
	traffic record.
	* Incremented the package version to 2.1.5.
2005-07-11 Fred Gleason <fredg@salemradiolabs.com>
	* Fixed bugs in 'labd.h' and 'labd.c' that was causing the build
	to break when configured without GPIO.
2005-11-18 Fred Gleason <fredg@salemradiolabs.com>
	* Fixed a bug in 'wavlib.c' that was causing an abnormal exit when
	processing a recording with a non-zero tail trim setting (Mantis
	bug #98).
	* Incremented the package version to 2.1.6.
2006-02-08 Fred Gleason <fredg@salemradiolabs.com>
	* Modified 'lab.spec.in' and 'make_slack.in' to use the
	install paths provided by Autoconf.
2007-03-05 Fred Gleason <fredg@salemradiolabs.com>
	* Updated the e-mail address in the copyright notices.
2007-03-05 Fred Gleason <fredg@salemradiolabs.com>
	* Fixed a typo in 'lab.h' that was causing them build to break.
2009-09-08 Fred Gleason <fredg@salemradiolabs.com>
	* Fixed bugs in 'wavlib.c' that broke the build under OpenSuSE
	11.1.
	* Updated the 'Copyright:' tag to 'License:' in 'lab.spec.in'.
2009-09-08 Fred Gleason <fredg@salemradiolabs.com>
	* Incremented the package version to 2.1.7.
2009-11-13 Fred Gleason <fredg@salemradiolabs.com>
	* Fixed a bug that caused the labd init script to fail when built
	using a non-default --prefix= value.
2009-11-13 Fred Gleason <fredg@salemradiolabs.com>
	* Incremented the package version to 2.1.8.
2010-12-31 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a typo in 'lab.h' that broke the build under CentOS 5.5.
2010-12-31 Fred Gleason <fredg@paravelsystems.com>
	* Hard-coded web installation paths for the 'make rpm' target in
	'configure.in' and 'lab.spec.in'.
2010-12-31 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.9.
2014-02-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed warning in 'conflib.c'.
2014-02-27 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.10.