@@ -201,3 +201,8 @@
 	* Fixed warning in 'conflib.c'.
 2014-02-27 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 2.1.10.
+2015-11-19 Fred Gleason <fredg@paravelsystems.com>
+	* Moved 'configure.in' to 'configure.ac'.
+	* Modernized invocation of AC_INIT() and AM_INIT_AUTOMAKE() in
+	'configure.ac'.
+	* Modified 'Makefile.am' to use modern RPM build tree.
